# ghcjs-c3

./: .gitignore  LICENSE  README.md  default.nix  ghcjs-c3.cabal  index.html  package.json  shell.nix  stack.yaml
app/: Main.hs
src/: C3.hs
src/C3/: Chart.hs  Foreign.hs  Foreign.hs~  Types.hs  Types.hs~
src/C3/Chart/: Chart.hs  Gauge.hs
