name:                ghcjs-c3
version:             0.0.0.1
synopsis:            C3 bindings for GHCJS.
description:         Please see README.md
homepage:            https://github.com/mbeidler/ghcjs-c3#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           2016 Michael Beidler
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     C3
                     , C3.Foreign
                     , C3.Types
                     , C3.Chart
                     , C3.Chart.Gauge
  ghc-options:         -Wall
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , ghcjs-base
                     , data-default
                     , text
                     , time
                     , vector
  default-language:    Haskell2010

executable ghcjs-c3-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-c3
                     , data-default
  default-language:    Haskell2010

test-suite ghcjs-c3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-c3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbeidler/ghcjs-c3
